--- a/sesi suzano - licao/index.html
+++ b/sesi suzano - licao/index.html
@@ -20,6 +20,7 @@
                 <a class="botao" href="mailto:exemplo@email.com">Contate-nos</a>
             </nav>
             
+            
         </div>
     </header>
     <main>
@@ -66,7 +67,7 @@
             <div class="container-grid conteudo-endereco">
                 <h2>Endereço:</h2>
                 <div class="texto-endereco">
-                    <p>Alameda Barão de Limeira, 539 Santa Cecilia, São Paulo - SP CEP: 01202-001</p>
+                    <p> Av. Sen. Roberto Símonsen, 550 - Jardim Imperador, Suzano - SP, 08673-270</p>
                 </div>
                 <a href=https://goo.gl/maps/Wh6hbeFS51RCSmJQ9 target="blank"><img class="mapa" src="imagens/mapa.png" alt="Mapa mostrando a localização da escola."></a>
             </div>
@@ -76,5 +77,6 @@
         <span>Copyright &copy; 2021 - Escola Senai de Informática</span>
     </footer>
   
+    <script src="main.js"></script>
 </body>
 </html>
