--- a/sesi suzano - licao/index.html
+++ b/sesi suzano - licao/index.html
@@ -19,6 +19,8 @@
                 <a href="#endereco">Endereço</a>
                 <a class="botao" href="mailto:exemplo@email.com">Contate-nos</a>
             </nav>
+            <a class="menu-barras" onclick="mostrarMenu()">
+                <span class="fas fa-bars"></span>
             
             
         </div>
