--- a/sesi suzano - licao/index.html
+++ b/sesi suzano - licao/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="css/layout_tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/layout_smartphone.css">
+    <script src="https://kit.fontawesome.com/3ff5f3edd5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
